--- a/Webapp/templates/base.html
+++ b/Webapp/templates/base.html
@@ -21,7 +21,7 @@
 <div class="flex-wrapper">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
-        <a class="navbar-brand h3 p-2 px-5" href="{{ home }}">FastAF</a>
+        <a class="navbar-brand h3 p-2 px-5" href="{{ home }}">Custom Delivery</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav_content" aria-controls="nav_content" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
