--- a/Webapp/templates/index.html
+++ b/Webapp/templates/index.html
@@ -18,6 +18,16 @@
                 </div>
                 <a class="btn btn-danger btn-lg" href="{% url 'send_parcel'%}">Continue</a>
             </div>
+            <div class="p-5">
+                <div class="h6 text-center mb-3">
+                    OR
+                </div>
+                <a href="/business">
+                    <button class="btn btn-block btn-primary">
+                        Delivery Partner
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
 </div>
